--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
           E-mail: aptheparker@gmail.com <br />
           KakaoTalk: aptheparker <br />
           Instagram: aptheparker <br />
-          Github: aptheparker
+          Github: aptheparker <br />
+          todo mate: aptheparker
         </p>
       </div>
     </section>
