dev info update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="assets/img/main-images/main-image6.png" alt="image 6" class="main-image6"/>
     </div>
     <button class="go-button">
-      <a href="views/about.html">AP's website</a>
+      <a href="views/about.html">Go to AP's website</a>
     </button>
   </body>
 </html>
