--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <br />
         &emsp;-WEB: HTML, CSS, JS (ES5 & ES6+)
         <br />
-        &emsp;-JAVA, PYTHON, C, SQL, Node.js, Flutter, React.js
+        &emsp;-JAVA, PYTHON, C, SQL, Node.js, React.js, Flutter
         <hr />
       </div>
 
