--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           AP's Github
         </a>
         <br />
-        &emsp;-WEB: HTML, CSS, JS (ES5 & ES6+)
+        &emsp;-WEB: HTML, CSS, JS
         <br />
         &emsp;-JAVA, PYTHON, C, Node.js, React.js, Flutter
         <hr />
