--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
         &emsp;-WEB: HTML, CSS, JS
         <br />
         &emsp;-JAVA, PYTHON, C, Node.js, React.js, Flutter
+        <br />
+        &emsp;-Solidity
         <hr />
       </div>
 
