--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <br />
         &emsp;-WEB: HTML, CSS, JS
         <br />
-        &emsp;-JAVA, PYTHON, C, Node.js, React.js, Flutter
+        &emsp;-Java, Python, C, Node.js, React.js, Flutter
         <br />
         &emsp;-Solidity
         <hr />
