--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
               <p>1. "SKKRYPTO" ("스크립토")</p>
               <p>*Blockchain Academy （블록체인 학회）</p>
               <li>-Developing Team （개발팀）</li>
+              <li>-Leader (회장)</li>
               <p>(2022/09 ~)</p>
             </ul>
             <hr />
