--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/favicon.ico" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/normalize.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -16,19 +17,10 @@
   </head>
 
   <body>
-    <video
-      id="background-video"
-      autoplay
-      loop
-      muted
-      poster="background/bg2.png"
-    >
-      <source src="background/bg2.mp4" type="video/mp4" />
-    </video>
 
     <header>
       <div class="logo">
-        <img src="img/main_img/logo.png" alt="" />
+        <img src="assets/img/logo/ap-logo.png" alt="" />
       </div>
       &emsp;ap's Website
     </header>
@@ -74,7 +66,7 @@
       </div>
 
       <div class="symbol_img">
-        <img src="img/main_img/symbol.png" alt="symbol" />
+        <img src="assets/img/logo/ap-logo.png" alt="symbol" />
       </div>
     </section>
 
