--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="main-container">
-    <button class="go-button">Go to AP's website</button>
+    <button class="go-button"><a href="views/main.html">Go to AP's website</a></button>
   </div>
 </body>
 </html>
