--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <title>AP's website</title>
-</head>
-<body>
-  <div class="main-container">
-    <button class="go-button"><a href="views/main.html">Go to AP's website</a></button>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>AP's website</title>
+  </head>
+  <body>
+    <div class="image-container">
+      <img src="assets/img/main-images/main-image1.png" alt="image 1">
+      <img src="assets/img/main-images/main-image2.png" alt="image 2">
+      <img src="assets/img/main-images/main-image3.png" alt="image 3">
+      <img src="assets/img/main-images/main-image4.png" alt="image 4">
+      <img src="assets/img/main-images/main-image5.png" alt="image 5">
+      <img src="assets/img/main-images/main-image6.png" alt="image 6">
+      <img src="assets/img/main-images/main-image7.png" alt="image 7">
+    </div>
+    <div class="main-container">
+      aptheparker's Website
+    </div>
+      
+      <button class="go-button">
+        <a href="views/about.html">Go to AP's website</a>
+      </button>
+  </body>
 </html>
